force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/SOLXYZCSO001__ReportDeliverySchedule__c.object-meta.xml
<CustomObject>
    <description>Manage the mapping of Field</description>
    <label>帳票配信スケジュール</label>
    <nameField>
        <label>配信スケジュール名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>