force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__DeliveryEcmDownloadAllow__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryEcmDownloadAllow__c</fullName>
    <label>Fleekdirve 共有リンクダウンロード許可</label>
    <length>32</length>
    <type>Text</type>
</CustomField>