force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__DeliveryEcmDownloadLimit__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryEcmDownloadLimit__c</fullName>
    <label>Fleekdrive 配信ダウンロード回数</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>