force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__DeliveryEcmDownloadPasswordAuto__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryEcmDownloadPasswordAuto__c</fullName>
    <label>Fleekdrive 配信パスワード自動</label>
    <length>32</length>
    <type>Text</type>
</CustomField>