force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__DeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryMethod__c</fullName>
    <label>配信方法</label>
    <length>32</length>
    <type>Text</type>
</CustomField>