force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__DeliveryPeriodType__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryPeriodType__c</fullName>
    <label>配信期間種別</label>
    <length>32</length>
    <type>Text</type>
</CustomField>