force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__DeliverySfNotifyOnVisit__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliverySfNotifyOnVisit__c</fullName>
    <label>Salesforce 配信初回アクセス通知</label>
    <length>32</length>
    <type>Text</type>
</CustomField>