force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__DeliveryStartDate__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__DeliveryStartDate__c</fullName>
    <label>配信実行日時</label>
    <length>32</length>
    <type>Text</type>
</CustomField>