force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__ExecDeliveryMonthExcludeDayofweek__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ExecDeliveryMonthExcludeDayofweek__c</fullName>
    <label>除外曜日</label>
    <length>64</length>
    <type>Text</type>
</CustomField>