force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__ExecDeliveryMonthExcludeHoliday__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ExecDeliveryMonthExcludeHoliday__c</fullName>
    <label>祝日除外</label>
    <length>32</length>
    <type>Text</type>
</CustomField>