force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__ExecDeliveryMonthExcludeType__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ExecDeliveryMonthExcludeType__c</fullName>
    <label>除外時実行</label>
    <length>32</length>
    <type>Text</type>
</CustomField>