force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__ExecDeliveryWeek__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ExecDeliveryWeek__c</fullName>
    <label>配信毎週実行曜日</label>
    <length>64</length>
    <type>Text</type>
</CustomField>