force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__ExecInterval__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ExecInterval__c</fullName>
    <label>実行間隔</label>
    <length>32</length>
    <type>Text</type>
</CustomField>