force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__ExecNextDate__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ExecNextDate__c</fullName>
    <label>次回実行日</label>
    <length>32</length>
    <type>Text</type>
</CustomField>