force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__ExecNextNo__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ExecNextNo__c</fullName>
    <label>次回実行回</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>