force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__ExecOutputMonth__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ExecOutputMonth__c</fullName>
    <label>作成毎月実行日</label>
    <length>64</length>
    <type>Text</type>
</CustomField>