force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__ExecOutputTime__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ExecOutputTime__c</fullName>
    <label>作成実行時刻</label>
    <length>32</length>
    <type>Text</type>
</CustomField>