force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__ExecOutputWeek__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ExecOutputWeek__c</fullName>
    <label>作成毎週実行曜日</label>
    <length>64</length>
    <type>Text</type>
</CustomField>