force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__IsNoticeChangeable__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__IsNoticeChangeable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>通知変更可能</label>
    <type>Checkbox</type>
</CustomField>