force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__MailPasswordBcc__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__MailPasswordBcc__c</fullName>
    <label>パスワード通知メール送信先(Bcc)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>