force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__MailPasswordMessage__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__MailPasswordMessage__c</fullName>
    <description>パスワード通知メールメッセージ</description>
    <label>パスワード通知メールメッセージ</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>