force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__MailTemplate__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__MailTemplate__c</fullName>
    <label>通知テンプレート</label>
    <length>18</length>
    <type>Text</type>
</CustomField>