force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__MailUrlTo__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__MailUrlTo__c</fullName>
    <label>ダウンロード通知メール送信先(To)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>