force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__ReportDefinitionName__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__ReportDefinitionName__c</fullName>
    <label>帳票定義名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>