force-app/main/default/objects/SOLXYZCSO001__ReportDeliverySchedule__c/fields/SOLXYZCSO001__UpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>SOLXYZCSO001__UpdatedDate__c</fullName>
    <label>編集更新日</label>
    <type>DateTime</type>
</CustomField>